Insert Usuario Terminado

--- a/src/app/user/pages/add/add.component.html
+++ b/src/app/user/pages/add/add.component.html
@@ -1,1 +1,52 @@
-<p>add works!</p>
+<h1 style="font-size:1.7rem;" mat-dialog-title>Agregar Usuario</h1>
+<div mat-dialog-content>
+
+    <form [formGroup]="formUser"  (ngSubmit)="addUser()">
+        <div class="form-field">
+            <mat-form-field appearance="fill">
+              <mat-label>Mail</mat-label>
+              <input matInput formControlName="mail">
+              <mat-error *ngIf="formUser.get('mail')?.hasError('required') && formUser.get('mail')?.touched">
+                El Mail <strong>es requerido</strong>
+              </mat-error>
+
+              <mat-error *ngIf="formUser.get('mail')?.hasError('pattern') && formUser.get('mail')?.touched">
+                El Mail <strong>debe ser valido</strong>
+              </mat-error>
+            </mat-form-field>
+          </div>
+
+          <div class="form-field">
+            <mat-form-field appearance="fill">
+              <mat-label>Password</mat-label>
+              <input matInput formControlName="password">
+              <mat-error *ngIf="formUser.get('password')?.hasError('required') && formUser.get('password')?.touched">
+                El password <strong>es requerido</strong>
+              </mat-error>
+
+              <mat-error *ngIf="formUser.get('password')?.hasError('pattern') && formUser.get('password')?.touched">
+                El Password debe tener al menos 8 caracteres una mayuscula, una minuscula y un caracter especial
+            
+              </mat-error>
+            </mat-form-field>
+          </div>
+          
+          
+          <div class="form-field">
+            <mat-form-field appearance="fill">
+              <mat-label>Rol</mat-label>
+              <input matInput formControlName="idRole">
+              <mat-error *ngIf="formUser.get('idRole')?.invalid && formUser.get('idRole')?.touched">
+                El Rol <strong>es requerido</strong>
+              </mat-error>
+           
+             
+            </mat-form-field>
+          </div>
+            
+           
+        <button  type="submit" class="Guardar" mat-button color="primary">Guardar</button>
+        <!-- <button class="Volver" routerLink="listEmpleados" mat-button color="accent">Volver</button> -->
+    </form>
+
+</div>
